--- a/src/app/modals/solar-body-modal/solar-body-modal.page.html
+++ b/src/app/modals/solar-body-modal/solar-body-modal.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="platform.sizeTemplate === 'standard'">
   <ion-card>
     <ion-card-header>
 
@@ -62,6 +62,81 @@
             {{colony[col.filter]}}
           </ion-col>
           <ion-col><ion-button (click)="viewColony(colony)">View</ion-button></ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <ion-grid *ngSwitchCase="'stations'">
+        <ion-row>
+          <ion-col *ngFor="let col of stationS.aStationsTableColumns">
+            <ion-item fill="solid" class="ion-margin-bottom">
+              <ion-label position="floating">{{col.label}}</ion-label>
+              <ion-input type="text" name="filter{{col.label}}" [(ngModel)]="stationS.aStationsFilters[col.filter]" (ngModelChange)="filterStations()" clearInput=""></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+        <ion-row *ngFor="let station of aFilteredStations">
+          <ion-col *ngFor="let col of stationS.aStationsTableColumns">
+            {{station[col.filter]}}
+          </ion-col>
+          <ion-col><ion-button (click)="viewStation(station)">View</ion-button></ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
+<ion-content *ngIf="platform.sizeTemplate === 'small'">
+  <ion-card>
+    <ion-card-header></ion-card-header>
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-item slot="helper">Name</ion-item>
+        <ion-label>{{aSolarBody.name}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-item slot="helper">Primary Export</ion-item>
+        <ion-label>{{aSolarBody.resourceOne}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-item slot="helper">Secondary Export</ion-item>
+        <ion-label>{{aSolarBody.resourceTwo}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-item slot="helper">X Coordinate</ion-item>
+        <ion-label>{{aSolarBody.xCoordinate}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-item slot="helper">Y Coordinate</ion-item>
+        <ion-label>{{aSolarBody.yCoordinate}}</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card id="colonies-small">
+    <ion-card-header>
+      <ion-card-title><span *ngIf="aFilteredColonies">{{aFilteredColonies.length}}</span> Colonies
+
+        <ion-segment [(ngModel)]="nsTab">
+          <ion-segment-button value="colonies">
+            <ion-label>Colonies</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="stations">
+            <ion-label>Stations</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content [ngSwitch]="nsTab">
+      <ion-grid class="ut-item-background-color">
+        <ion-row *ngFor="let colony of aFilteredColonies; let i = index" [ngClass]="(i % 2 === 0) ? 'odd-row' : 'even-row'">
+          <ion-col>
+            <ion-item *ngFor="let col of colonyS.aColoniesTableColumns">
+              <ion-note slot="helper">{{col.label}}</ion-note>
+              <ion-label>{{colony[col.filter]}}</ion-label>
+            </ion-item>
+            <ion-item><ion-button (click)="viewColony(colony)">View</ion-button></ion-item>
+          </ion-col>
         </ion-row>
       </ion-grid>
 
