--- a/src/app/modals/solar-system-modal/solar-system-modal.page.html
+++ b/src/app/modals/solar-system-modal/solar-system-modal.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="platform.sizeTemplate === 'standard'">
   <ion-card>
     <ion-card-header>
     </ion-card-header>
@@ -53,6 +53,73 @@
             {{solarBody[col.filter]}}
           </ion-col>
           <ion-col><ion-button (click)="viewSolarBody(solarBody)">View</ion-button></ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
+<ion-content *ngIf="platform.sizeTemplate === 'small'">
+  <ion-card>
+    <ion-card-header></ion-card-header>
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-note slot="helper">Name</ion-note>
+        <ion-label>{{aSolarSystem.name}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-note slot="helper">Resource One</ion-note>
+        <ion-label>{{aSolarSystem.resourceOne}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-note slot="helper">Resource Two</ion-note>
+        <ion-label>{{aSolarSystem.resourceTwo}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-note slot="helper">Solar Yield</ion-note>
+        <ion-label>{{aSolarSystem.solarYield}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-note slot="helper">X Coordinate</ion-note>
+        <ion-label>{{aSolarSystem.xCoordinate}}</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-note slot="helper">Y Coordinate</ion-note>
+        <ion-label>{{aSolarSystem.yCoordinate}}</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card id="solarBodies">
+    <ion-card-header>
+      <ion-card-title><span *ngIf="aFilteredSolarBodies">{{aFilteredSolarBodies.length}}</span> Solar Bodies</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-button id="nested-button-two-small"><ion-icon name="funnel-outline"></ion-icon></ion-button>
+      <ion-popover trigger="nested-button-two-small" [dismissOnSelect]="true">
+        <ng-template>
+          <ion-content>
+            <ion-list>
+              <ion-item [button]="true" [detail]="false" *ngFor="let column of aSolarBodiesTable">
+                <ion-label (click)="sortSolarBodies(column.filter, order= !order)">{{column.label}}</ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-content>
+        </ng-template>
+      </ion-popover>
+
+      <ion-button *ngIf="order === false" (click)="sortSolarBodies(sortField, order= !order)"><ion-icon name="arrow-up-circle-outline"></ion-icon></ion-button>
+      <ion-button *ngIf="order === true" (click)="sortSolarBodies(sortField, order= !order)"><ion-icon name="arrow-down-circle-outline"></ion-icon></ion-button>
+
+      <ion-grid class="ut-item-background-color">
+        <ion-row *ngFor="let solarBody of aFilteredSolarBodies; let i = index" [ngClass]="(i % 2 === 0) ? 'odd-row' : 'even-row'">
+          <ion-col>
+            <ion-item *ngFor="let col of aSolarBodiesTable">
+              <ion-note slot="helper">{{col.label}}</ion-note>
+              <ion-label>{{solarBody[col.filter]}}</ion-label>
+            </ion-item>
+            <ion-item><ion-button (click)="viewSolarBody(solarBody)">View</ion-button></ion-item>
+          </ion-col>
         </ion-row>
       </ion-grid>
     </ion-card-content>
