--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,15 +123,15 @@
         -->
         <ion-card style="margin: 0; text-align: center">
           <ion-card-header>
-            <ion-card-title>{{aAM.versionTitle}}</ion-card-title>
-            <ion-card-subtitle>{{aAM.versionSubTitle}}</ion-card-subtitle>
+            <ion-card-title>{{aAM.title}}</ion-card-title>
+            <ion-card-subtitle>{{aAM.subTitle}}</ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
             <ion-grid>
               <ion-row>
                 <ion-col>
-                  <p>{{aAM.versionDescription}}</p>
-                  <p>Read all the details about the current version here: <a href="{{aAM.versionReleaseNotes}}" target="_blank">{{aAM.versionSubTitle}}</a> </p>
+                  <p>{{aAM.description}}</p>
+                  <p>Read all the details about the current version here: <a href="{{aAM.releaseNotes}}" target="_blank">{{aAM.subTitle}}</a> </p>
                 </ion-col>
               </ion-row>
               <ion-row>
