--- a/src/app/stations/station/station.page.html
+++ b/src/app/stations/station/station.page.html
@@ -45,14 +45,18 @@
     </ion-card-content>
   </ion-card>
 
+  <app-trade *ngSwitchCase="'market'" [market]="'station'" [trader]="trader" [traderID]="traderID"></app-trade>
+
+  <!--
   <ion-card *ngSwitchCase="'market'">
     <ion-card-header>
       <ion-title>Market</ion-title>
     </ion-card-header>
     <ion-card-content>
-      <app-trade [market]="'station'" [trader]="trader" [traderID]="traderID"></app-trade>
+      <app-trade *ngSwitchCase="'market'" [market]="'station'" [trader]="trader" [traderID]="traderID"></app-trade>
     </ion-card-content>
   </ion-card>
+  -->
 
   <ion-card *ngSwitchCase="'listedItems'">
     <ion-card-header>
