--- a/src/app/colonies/colony/colony.page.html
+++ b/src/app/colonies/colony/colony.page.html
@@ -1,6 +1,6 @@
 <!--This page should always be included in another page.-->
 
-<ion-grid *ngIf="foundColony; else noColony">
+<ion-grid *ngIf="foundColony; else noColony" class="ut-item-background-color">
   <ion-row>
     <ion-col>
       <ion-card>
@@ -11,12 +11,10 @@
           <ion-grid>
             <ion-row>
               <ion-col *ngFor="let col of colonyS.aColoniesTableColumns">
-                <ion-label>{{col.label}}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col *ngFor="let col of colonyS.aColoniesTableColumns">
-                {{colonyS.aColony[col.filter]}}
+                <ion-item>
+                  <ion-note slot="helper">{{col.label}}</ion-note>
+                  <ion-label>{{colonyS.aColony[col.filter]}}</ion-label>
+                </ion-item>
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -31,23 +29,18 @@
         <ion-card-content>
           <ion-grid>
             <ion-row>
-              <ion-col>
-                <ion-label>
-                  Name
-                </ion-label>
-              </ion-col>
-              <ion-col>
-                <ion-label>
-                  Coordinates
-                </ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                {{colonyS.aSolarSystem.name}}
-              </ion-col>
-              <ion-col>
-                {{colonyS.aSolarSystem.xCoordinate}}, {{colonyS.aSolarSystem.yCoordinate}}
+              <ion-col *ngFor="let col of colonyS.aSSTableColumns">
+                <ion-item>
+                  <ion-note slot="helper">{{col.label}}</ion-note>
+                  <ion-label>
+                    <span *ngIf="col.filter === 'coordinates'; else normalSS">
+                      {{colonyS.aSolarSystem.xCoordinate}}, {{colonyS.aSolarSystem.yCoordinate}}
+                    </span>
+                    <ng-template #normalSS>
+                      {{colonyS.aSolarSystem[col.filter]}}
+                    </ng-template>
+                  </ion-label>
+                </ion-item>
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -62,23 +55,21 @@
         <ion-card-content>
           <ion-grid>
             <ion-row>
-              <ion-col>
-                <ion-label>
-                  Name
-                </ion-label>
-              </ion-col>
-              <ion-col>
-                <ion-label>
-                  Coordinates
-                </ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                {{colonyS.aSolarBody.name}}
-              </ion-col>
-              <ion-col>
-                {{colonyS.aSolarBody.xCoordinate}}, {{colonyS.aSolarBody.yCoordinate}}
+              <ion-col *ngFor="let col of colonyS.aSBTableColumns">
+                <ion-item>
+                  <ion-note slot="helper">{{col.label}}</ion-note>
+                  <ion-label>
+                    <span *ngIf="col.filter === 'coordinates'">
+                      {{colonyS.aSolarBody.xCoordinate}}, {{colonyS.aSolarBody.yCoordinate}}
+                    </span>
+                    <span *ngIf="col.filter === 'resourceOne' || col.filter === 'resourceTwo'">
+                      {{colonyS.aSolarBody[col.filter]}} <span *ngIf="colonyS.aSolarBody[col.filter] === 'ore' || colonyS.aSolarBody[col.filter] === 'silicone' || colonyS.aSolarBody[col.filter] === 'power'">- {{colonyS.aSolarBody[col.filter+'Yield']}}% Yield</span>
+                    </span>
+                    <span *ngIf="col.filter !== 'resourceOne' && col.filter !== 'resourceTwo' && col.filter !== 'coordinates'">
+                      {{colonyS.aSolarBody[col.filter]}}
+                    </span>
+                  </ion-label>
+                </ion-item>
               </ion-col>
             </ion-row>
           </ion-grid>
